--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "argon2": "^0.40.3",
+    "axios": "^1.7.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.6.7"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.7",
+    "react-hook-form": "^7.52.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
