--- a/server/.env.sample
+++ b/server/.env.sample
@@ -3,7 +3,7 @@
 # Application Configuration
 APP_PORT=3310
 APP_SECRET=YOUR_APP_SECRET_KEY
-
+GOOGLE_MAPS_API_KEY=
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=3306
