--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prettier": "3.2.5",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "dotenv": "^16.4.5"
   },
   "lint-staged": {
     "*.sql": "prettier --check",
